tests/macros/t18235.nim
discard """
errormsg: '''
undeclared identifier: 'foo'
'''
"""
import m18235
foo()